<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_jeu"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <com.unblockme.unblockme.view.GridView
        android:id="@+id/gridView5"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:background="@drawable/second_buttons_bg"
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toStartOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="@+id/gridView5"
        app:layout_constraintTop_toTopOf="@+id/button_back" />

    <Button
        android:background="@drawable/second_buttons_bg"
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView5" />

    <Button
        android:background="@drawable/second_buttons_bg"
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Restart"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="@+id/gridView5"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="@+id/button_back" />

    <TextView
        android:background="@drawable/text_shape_bg"
        android:id="@+id/Puzzle_Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Puzzle"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/level"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Left_Arrow"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/level"
        app:layout_constraintTop_toTopOf="@id/level"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@id/gridView5"
        app:layout_constraintStart_toEndOf="@+id/Puzzle_Titre"
        app:layout_constraintStart_toStartOf="@+id/gridView5" />

    <ImageView
        android:id="@+id/Right_Arrow"
        android:layout_width="50dp"
        android:layout_height="24dp"

        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintStart_toEndOf="@+id/level"
        app:layout_constraintTop_toTopOf="@id/level"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/arrow_right" />

    <TextView
        android:background="@drawable/text_shape_bg"
        android:id="@+id/Moves_Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:gravity="center"
        android:text="@string/moves"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/Puzzle_Titre"
        app:layout_constraintEnd_toEndOf="@id/gridView5" />

    <TextView

        android:id="@+id/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="260dp"
        android:gravity="center"
        android:text="0"

        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toEndOf="@id/gridView5"
        app:layout_constraintTop_toBottomOf="@id/Moves_Titre"
        app:layout_constraintVertical_bias="0.436" />

    <TextView

        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="236dp"
        android:text="--/15"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/gridView5"
        app:layout_constraintTop_toBottomOf="@+id/moves" />


</android.support.constraint.ConstraintLayout>